i18n = import('i18n')

langs = [
]

i18n.gettext('emeus',
             languages: langs,
             args: [
               '--from-code=UTF-8',
               '--keyword=g_dngettext:2,3',
               '--add-comments',
               '--msgid-bugs-address=https://github.com/ebassi/emeus/issues/new',
             ])
