ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'Emeus')
ent_conf.set('PACKAGE_BUGREPORT', 'https://github.com/ebassi/emeus/issues')
ent_conf.set('PACKAGE_NAME', 'emeus')
ent_conf.set('PACKAGE_STRING', 'emeus')
ent_conf.set('PACKAGE_TARNAME', 'emeus-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'http://ebassi.github.io/emeus')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', emeus_api_version)
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)
